--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,17 +5,18 @@ services:
     image: postgres:16-alpine
     container_name: promptshare-test-db
     environment:
-      POSTGRES_USER: test_user
-      POSTGRES_PASSWORD: test_password
-      POSTGRES_DB: test_promptshare
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ChgMeS0m3t_m3123
+      POSTGRES_DB: promptshare
     ports:
-      - "5433:5432"
+      - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test_user -d test_promptshare"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d promptshare"]
       interval: 2s
       timeout: 5s
       retries: 5
     tmpfs:
       - /var/lib/postgresql/data
     # Use tmpfs for faster test database (data is lost on container stop)
+
 
