Remove hardcoded credentials from config.py
- Make database_url, LDAP settings, and secret_key required fields
- All sensitive configuration must now come from .env file
- Updated .env.example with proper documentation
- Prevents accidental use of hardcoded credentials in code

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,26 +1,48 @@
-# Application
+# Application Configuration
 APP_NAME=PromptShare
 APP_ENV=development
 DEBUG=True
 
 # Database
-DATABASE_URL=postgresql://user:password@localhost/promptshare
+# Required - PostgreSQL connection string
+# Format: postgresql+psycopg://user:password@host:port/database
+# For local development: postgresql+psycopg://postgres:password@localhost:5432/promptshare
+# For AWS RDS: postgresql+psycopg://user:password@your-rds-endpoint:5432/promptshare
+DATABASE_URL=postgresql+psycopg://postgres:password@localhost:5432/promptshare
 
-# LDAP/AD
+# LDAP/AD Authentication
+# Required - LDAP server configuration
 LDAP_SERVER=ldap://ad.company.com
 LDAP_BASE_DN=dc=company,dc=com
 LDAP_USER_DN=cn=admin,dc=company,dc=com
 LDAP_PASSWORD=secret
 
 # Security
+# Required - Secret key for JWT token signing
+# Generate a secure random key for production: python -c "import secrets; print(secrets.token_urlsafe(32))"
 SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Redis
+# Redis (optional for development)
 REDIS_URL=redis://localhost:6379/0
+# For AWS ElastiCache: redis://your-elasticache-endpoint:6379/0
 
-# CORS
+# Celery (optional for development)
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Email (SMTP) - Optional
+EMAIL_ENABLED=False
+EMAIL_SMTP_HOST=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASSWORD=
+EMAIL_FROM_ADDRESS=noreply@promptshare.com
+EMAIL_FROM_NAME=PromptShare
+
+# CORS Origins
+# Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # AWS (for production)
